Fixed grid placement and spacing on signup.html.

--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,3 @@ p {
 	background-color: #f2f2f2;
 }
 
-input {
-	width: 120px;
-}
